--- a/Parsip100/ParsipHaptics/DlgPizaModel.ui
+++ b/Parsip100/ParsipHaptics/DlgPizaModel.ui
@@ -84,8 +84,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>108</y>
+     <x>62</x>
+     <y>173</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -97,8 +97,8 @@
   <widget class="QDoubleSpinBox" name="sbHeight">
    <property name="geometry">
     <rect>
-     <x>218</x>
-     <y>105</y>
+     <x>220</x>
+     <y>170</y>
      <width>151</width>
      <height>27</height>
     </rect>
@@ -123,8 +123,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>136</y>
+     <x>62</x>
+     <y>201</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -136,14 +136,66 @@
   <widget class="QDoubleSpinBox" name="sbRadius">
    <property name="geometry">
     <rect>
-     <x>218</x>
-     <y>135</y>
+     <x>220</x>
+     <y>200</y>
      <width>151</width>
      <height>27</height>
     </rect>
    </property>
    <property name="value">
     <double>4.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="sbHTowers">
+   <property name="geometry">
+    <rect>
+     <x>218</x>
+     <y>101</y>
+     <width>151</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>8</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>100</y>
+     <width>121</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Horizontal Towers #</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>130</y>
+     <width>131</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Vertical Towers #</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="sbVTowers">
+   <property name="geometry">
+    <rect>
+     <x>218</x>
+     <y>132</y>
+     <width>151</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>8</number>
    </property>
   </widget>
  </widget>
